--- a/Members/Nolasco.html
+++ b/Members/Nolasco.html
@@ -336,7 +336,7 @@
                   <img src="../assets/images/Gian/customer.png" alt="finance" loading="lazy">
                 </figure>
                 <h3 class="project-title">Event Management Catering System</h3>
-                <p class="project-category">Front-End Development</p>
+                <p class="project-category">Back-End Development</p>
               </a>
             </li>
 
