--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <div class="card_container">
       <div class="card">
-        <img src="../assets/images/lim_portrait_pic.jpg" alt="">
+        <img src="./assets/images/lim_portrait_pic.jpg" alt="">
         <div class="card-content">
           <h2>GIAN LIM</h2>
           <p>
@@ -60,7 +60,7 @@
       </div>
 
       <div class="card">
-        <img src="../assets/images/jaime_portrait_pic.png" alt="">
+        <img src="./assets/images/jaime_portrait_pic.png" alt="">
         <div class="card-content">
           <h2>JEON DREW JAIME</h2>
           <p>Jeon Drew Jaime is an experienced front-end web developer with experience in graphic design. He can make
@@ -72,7 +72,7 @@
       </div>
 
       <div class="card">
-        <img src="../assets/images/charles_portrait.jpg" alt="">
+        <img src="./assets/images/charles_portrait.jpg" alt="">
         <div class="card-content">
           <h2>CHARLES NOLASCO</h2>
           <p>Charles Daniel Nolasco is an developer with experience in Unity and mobile games. He can make your game fun
@@ -103,14 +103,14 @@
           </p>
         </div>
         <div class="image">
-          <img src="../assets/images/asset_data_analysis.png" alt="profile" />
+          <img src="./assets/images/asset_data_analysis.png" alt="profile" />
         </div>
       </div>
     </section>
 
     <section>
       <div class="section__container">
-        <div class="image">
+        <div class="mage">
           <img src="../assets/images/asset_telescope.png" alt="profile" />
         </div>
         <div class="content">
