--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+  <link rel="shortcut icon" href="./assets/images/logo.png" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -74,7 +74,7 @@
 
 <footer>
   <div class="pseudocore_logo">
-    <img src="../assets/images/logo.png" alt="profile" />
+    <img src="./assets/images/logo.png" alt="profile" />
   </div>
   <div class="footer-links">
     <h6 id="title_pseudocore">PSEUDOCORE</h6>
