--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <section>
       <div class="section__container">
         <div class="mage">
-          <img src="../assets/images/asset_telescope.png" alt="profile" />
+          <img src="./assets/images/asset_telescope.png" alt="profile" />
         </div>
         <div class="content">
           <h1 class="title">VISION</h1>
@@ -133,7 +133,7 @@
 
 <footer>
   <div class="pseudocore_logo">
-    <img src="../assets/images/logo.png" alt="profile" />
+    <img src="./assets/images/logo.png" alt="profile" />
   </div>
   <div class="footer-links">
     <h6 id="title_pseudocore">PSEUDOCORE</h6>
